--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Jacque's page</title>
 </head>
 <body>
-    <h2> hello world.</h2>
+    <nav>
+        <Ol>
+            <Li>About</Li>
+            <Li>Work</Li>
+            <Li>Contact</Li>
+        </Ol>
+    </nav>
+<section>about</section>
+<section>work</section>
+<section>contact</section>
+
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
