added project work

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacque's page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <Ol>
@@ -13,11 +16,23 @@
             <Li>Contact</Li>
         </Ol>
     </nav>
-<section>about</section>
-<section>work</section>
-<section>contact</section>
+    <section id="welcome-section">
+        <h1>about</h1>
+    </section>
+    <section id="projects">
+        <div class="project-tile">
+            <a href="https://codepen.io/JacqueLanglois/pen/NWNXzgg"></a>
+            <figure>
+                <img src="/images/Codepen.PNG" />
+                <figcaption>My DGM 1600 about me project</figcaption>
+            </figure>
+            </a>
 
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        </div>
+    </section>
+    <section>contact</section>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
-</html>
 
+</html>
