--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 
 <body>
-    <nav>
-        <Ol>
-            <Li>About</Li>
-            <Li>Work</Li>
-            <Li>Contact</Li>
+    <nav id=navbar>
+        <Ol class="nav-list">
+            <Li>
+                <a href="#welcome-section">About</a>
+            </Li>
+            <Li>
+                <a href="#projects">Work</a>
+            </Li>
+            <Li>
+                <a href="#contact">Contact</a>
+            </Li>
         </Ol>
     </nav>
     <section id="welcome-section">
-        <h1>about</h1>
+        <h1>Welcome to my page!</h1>
     </section>
     <section id="projects">
         <div class="project-tile">
@@ -30,7 +36,7 @@
 
         </div>
     </section>
-    <section>contact</section>
+    <section id="contact">contact</section>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
