--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacque's page</title>
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-    crossorigin="anonymous"
-  /> 
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav id=navbar>
+    <nav id="navbar">
         <ul class="nav-list">
             <Li>
                 <a href="#welcome-section">About</a>
@@ -34,49 +30,36 @@
     <section id="projects" class="projects-section">
         <div class="projects-grid project-tile">
             <a href="#">
-            <figure>
-                <img src="/images/Codepen.PNG" />
-                <figcaption>My DGM 1600 about me project</figcaption>
-            </figure>
+                <figure>
+                    <img src="/images/Codepen.PNG" />
+                    <figcaption>My DGM 1600 about me project</figcaption>
+                </figure>
             </a>
             <a href="#">
-            <figure>
-                <img src="/images/Codepen.PNG" />
-                <figcaption>My DGM 1600 about me project</figcaption>
-            </figure>
+                <figure>
+                    <img src="/images/Codepen.PNG" />
+                    <figcaption>My DGM 1600 about me project</figcaption>
+                </figure>
             </a>
             <a href="#">
-            <figure>
-                <img src="/images/Codepen.PNG" />
-                <figcaption>My DGM 1600 about me project</figcaption>
-            </figure>
+                <figure>
+                    <img src="/images/Codepen.PNG" />
+                    <figcaption>My DGM 1600 about me project</figcaption>
+                </figure>
             </a>
         </div>
     </section>
     <section id="contact">
         <h1>Contact</h1>
         <div class="contact-links">
-            <a
-            href="https://facebook.com/freecodecamp"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fab fa-facebook-square"></i> Facebook</a
-          >
-          <a
-      id="profile-link"
-      href="https://github.com/jacquelanglois"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-github"></i> Jacque's GitHub
-          <a
-          href="https://twitter.com/freecodecamp"
-          target="_blank"
-          class="btn contact-details"
-          ><i class="fab fa-twitter"></i> Twitter</a
-        >
-          <a href="mailto:example@example.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Send a mail</a
-    >
+            <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
+                    class="fab fa-facebook-square"></i> Facebook</a>
+            <a id="profile-link" href="https://github.com/jacquelanglois" target="_blank" class="btn contact-details"><i
+                    class="fab fa-github"></i> Jacque's GitHub
+                <a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
+                        class="fab fa-twitter"></i> Twitter</a>
+                <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a
+                    mail</a>
 
 
         </div>
