--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>Welcome to my page!</h1>
+        <h1>Welcome to my page!
+        </h1>
     </section>
     <section id="projects" class="projects-section">
         <div class="projects-grid project-tile">
