added data and starwars js

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     </section>
     <section id="projects" class="projects-section">
         <div class="projects-grid project-tile">
-            <a href="#">
+            <a href="/images/Codepen.PNG" target="_self">
                 <figure>
                     <img src="/images/Codepen.PNG" />
                     <figcaption>My DGM 1600 about me project</figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="/star wars/" target="_self">
                 <figure>
-                    <img src="/images/Codepen.PNG" />
-                    <figcaption>My DGM 1600 about me project</figcaption>
+                    <img src="/images/1200px-Star_wars2.svg.png" />
+                    <figcaption>Star Wars API Practice</figcaption>
                 </figure>
             </a>
             <a href="#">
@@ -65,7 +65,7 @@
 
         </div>
     </section>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  
 </body>
 
 </html>
