did some prectice before class

--- a/star wars/index.html
+++ b/star wars/index.html
@@ -6,7 +6,10 @@
     <title>Star Wars</title>
 </head>
 <body>
-    <h1> Star Wars API</h1>
+    <header>
+        <h1>star wars films</h1>
+    </header>
+    <main></main>
     <script type="module" src="main.js"></script>
 </body>
 </html>
