--- a/star wars/index.html
+++ b/star wars/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    
     <title>Star Wars</title>
 </head>
 <body>
     <header>
-        <h1>star wars films</h1>
+        <h1>Star Wars Films</h1>
     </header>
-    <main></main>
+    <main> </main>
     <script type="module" src="main.js"></script>
 </body>
 </html>
