editing css addond species

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>Welcome to my page!
+        <h1>Jacque's Portfolio.
         </h1>
     </section>
     <section id="projects" class="projects-section">
@@ -36,7 +36,7 @@
                     <figcaption>My DGM 1600 about me project</figcaption>
                 </figure>
             </a>
-            <a href="/star wars/" target="_self">
+            <a href="/star-wars-films/" target="_self">
                 <figure>
                     <img src="/images/1200px-Star_wars2.svg.png" />
                     <figcaption>Star Wars API Practice</figcaption>
@@ -59,8 +59,7 @@
                     class="fab fa-github"></i> Jacque's GitHub
                 <a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
                         class="fab fa-twitter"></i> Twitter</a>
-                <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a
-                    mail</a>
+                <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> E-mail</a>
 
 
         </div>
