--- a/star-wars-species/index.html
+++ b/star-wars-species/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-
     <title>star wars species</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
-
 <body>
-    <header>
-        <h1>Star Wars Species</h1>
-    </header>
-    <main></main>
+    <main id= "main"></main>
     <script src="main.js" type="module"></script>
 </body>
-
 </html>
