adding css and breaking male character button

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <figcaption>Star Wars API Practice</figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="/star-wars-species/" target="_self">
                 <figure>
-                    <img src="/images/Codepen.PNG" />
-                    <figcaption>My DGM 1600 about me project</figcaption>
+                    <img src="/images/bb8.png" />
+                    <figcaption>Star Wars Characters</figcaption>
                 </figure>
             </a>
         </div>
