--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <figcaption>Star Wars API Practice</figcaption>
                 </figure>
             </a>
-            <a href="/star-wars-species/" target="_self">
+            <a href="/star-wars-people/" target="_self">
                 <figure>
                     <img src="/images/bb8.png" />
                     <figcaption>Star Wars Characters</figcaption>
