--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poké-page</title>
-    <link rel="stylesheet" href="pokestyle.css"/>
+    <link rel="stylesheet" href="pokestyle.css" />
 </head>
 
 <script src="pokecode.js" type="module"></script>
 
 <body>
+    <header>
+        <h1> gotta cetch em all</h1>
+    </header>
+    <main>
+        <div class="pokemonGrid">
+
+
+        </div>
+    </main>
+<footer>
     
+</footer>
 </body>
+
 </html>
