this is going to be a long week

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1> gotta cetch em all</h1>
+        <h1> Gotta Catch 'em All</h1>
     </header>
     <main>
         <div class="pokemonGrid">
