--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1> Gotta Catch 'em All</h1>
+        <button>Add Pokemon</button>
     </header>
     <main>
         <div class="pokemonGrid">
