--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1> Gotta Catch 'em All</h1>
-        <button class="load">Add Pokemon</button>
+        <button class="load">Fetch Pokemon</button>
         <button Class="newPokemon">New Pokemon</button>
     </header>
     <main>
