adding poke cards to portpholio

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                     <img src="/images/bb8.png" />
                     <figcaption>Star Wars Characters</figcaption>
                 </figure>
+                <a href="/pokemon/" target="_self"> 
+                <figure>
+                    <img src="/images/pokemon/pngegg.png" />
+                    <figcaption>Pokemon ards</figcaption>
+                </figure>
             </a>
         </div>
     </section>
