oh good it won't format

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="/pokemon/" target="_self"> 
                 <figure>
                     <img src="/images/pokemon/pngegg.png" />
-                    <figcaption>Pokemon ards</figcaption>
+                    <figcaption>Pokemon Cards</figcaption>
                 </figure>
             </a>
         </div>
