--- a/congress/index.html
+++ b/congress/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Congress Bros</h1>
         <div id="buttonHeader">
-            <button id="seniorityButton">Sort by  Seniority</button>
+            <button id="seniorityButton">Sort by  Senority</button>
             <button id="birthdayButton">Sort by Birthday</button>
         </div>
     </header>
