--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                     <img src="/images/pokemon/pngegg.png" />
                     <figcaption>Pokemon Cards</figcaption>
                 </figure>
+                <a href="/congress/" target="_self"> 
+                    <figure>
+                        <img src="/images/12741-200.png" />
+                        <figcaption>Congress</figcaption>
+                    </figure>
             </a>
         </div>
     </section>
